Fix missing Scheduler tick; confirm constructor is right for bindings
Investigated a direct question — should Lesson 1's gamepad binding and
default command live in the opmode's constructor or in start()? — and
found a more fundamental gap first: nothing anywhere in code/v3/ or
docs/lessons/v3/ ever called Scheduler.getDefault().run(). Every command
and trigger binding written so far was correctly wired and would never
have executed, on sim or real hardware.

Root-caused and fixed by tracing OpModeRobot.loopFunc()'s real bytecode
(javap against the compiled 2027 alpha jars, not javadoc):

- robotPeriodic() runs unconditionally every tick, any opmode state,
  enabled or not — the correct permanent home for the scheduler tick.
  Robot now overrides it and calls Scheduler.getDefault().run(), in
  code/v3/lesson-1/Robot.java (cascaded to lesson-3) and taught as a
  new Lesson 1 section, "Keep the scheduler running."
- start() fires on *every* disabled-to-enabled transition, not once
  per opmode lifetime, while the constructor genuinely runs once, when
  the opmode is selected. This settles the original question directly:
  wiring belongs in the constructor. Putting it in start() would
  re-register a fresh Trigger binding on every re-enable. Confirmed by
  toggling DriverStationSim's enabled state and tracing the branch.
- BindingScope's opmode-detection (RobotState.getOpModeId()) reads from
  the same control-word cache that's refreshed at the very top of the
  same loopFunc() tick that later constructs the new opmode — so a
  Trigger created in the constructor scopes to the right opmode.
- Built and ran an empirical DriverStationSim-backed JUnit test
  confirming Commands V3's Scheduler/Trigger have zero built-in
  disabled-state gating (unlike V2's CommandScheduler): a whileTrue
  binding stays isRunning() while RobotState.isDisabled() is true.
  Lesson 1 now carries one short callout naming Phoenix 6 hardware
  as the actual safety net, matching this course's exist